spacing issue
the cards were slightly more to the right i centered them

--- a/grails-app/assets/stylesheets/adminProfile.css
+++ b/grails-app/assets/stylesheets/adminProfile.css
@@ -98,7 +98,7 @@ body{
 	color: #464646;
 	padding: 1%;
 	margin: 3%;
-	margin-left: 25%;
+	margin-left: 20%;
 	border-radius:8px;
 	background-color: white;
 }
